# object_search

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  planner.vcg  table_frame_publisher.sh  table_frame_sim_table.sh
include/: TableTopObject.h  collision_testing.h  grasp_planning.h  gripper.h  laser_assembler_server.h  left_gripper.h  manipulator.h  pass_through_gen.h  pcd_utils.h  planar_seg.h  planner.h  robot_arm.h  robothead.h  set_marker.h  van_der_corput.h
launch/: common.launch  environment_server.launch  l1.launch  laser+kinect-perception-tum.launch  laser+stereo-perception.launch  laser.launch  pick_place.launch  pr2_gazebo.launch  pr2_manipulation_prerequisites.launch  pr2_shelf_objects.launch  prerequisites_tum.launch  push.launch  right_arm_collision_free_ik.launch  shelf_objects.launch  table_2_objects.launch  table_blocking.launch  table_frame.launch  table_objects.launch
msg/: BoxSet.msg  Clusters.msg  PlanRequest.msg
objects/: blue_box_new.urdf  blue_box_tuned.urdf  green_box.urdf  green_box_tuned.urdf  shelf.urdf.xacro  small_box_tuned.urdf  small_box_tuned_smaller.urdf
src/: TableTopObject.cpp  cluster.cpp  collect_data.cpp  collision_testing.cpp  color_segmentation.cpp  cylindrical_segmentation.cpp  euclidean_segmentation.cpp  extract_color_clusters.cpp  extract_color_clusters_from_pcd.cpp  extract_cylinders_from_pcd.cpp  find_centroid.cpp  find_extents.cpp  grasp_designer.cpp  grasp_planning.cpp  kinematics.cpp  laser_assembler_server.cpp  laser_scan_reader.cpp  manipulator.cpp  motion_planning.cpp  move_arm.cpp  move_elbow.cpp  move_head_manual.cpp  move_left_arm.cpp  move_model.cpp  move_right_arm.cpp  move_torso.cpp  open_gripper_manual.cpp  pass_through_gen.cpp  pcd_utils.cpp  pick_place.cpp  pick_place_try.cpp  pick_place_try_v1.cpp  planar_seg.cpp  planar_seg_template.cpp  planner.cpp  pointcloud_to_hull.cpp  pointcloud_to_hull_megha.cpp  post_segmentation.cpp  push.cpp  push_try.cpp  (+7 more)
srv/: Execute_Plan.srv  Get_New_PCD.srv  PlanService.srv
